# POS_RUST_DEV

./: .env  .gitignore  Cargo.toml  README.md
src/: api_doc.rs  db.rs  main.rs
src/handlers/: category_handler.rs  location_handler.rs  mod.rs  unit_handler.rs
src/models/: category.rs  location.rs  mod.rs  unit.rs
