[package]
name = "crud_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
uuid = "1"
dotenv = "0.15"

 